# ehce

./: Cargo.toml  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: Cargo.toml
assets/src/: cache.rs  common.rs  lib.rs  loading.rs  parsing.rs
assets/src/common/: ref_or_inline.rs  textures.rs  tilemap.rs
assets/src/common/textures/: filter_mode.rs  sprite.rs  texture.rs
assets/src/loading/: staggerer.rs
bevy_utils/: Cargo.toml
bevy_utils/src/: lib.rs  simple_state_object.rs
collider_generator/: Cargo.toml
collider_generator/src/: lib.rs
common_model/: Cargo.toml
common_model/src/: color.rs  lib.rs  numbers.rs  ref_or_inline.rs  weighted.rs
common_model/src/numbers/: glam_wraps.rs  nonneg.rs  range_model.rs  uint_range.rs  unitfloat.rs  validated.rs
common_model/src/numbers/validated/: common.rs  in_range.rs  is_finite.rs  variadic.rs
game/: Cargo.toml
game/mods/: $schema.json
game/mods/base/devices/: tank_controller.json5
game/mods/base/settings/: render_settings.json
game/mods/base/spaceships/: body.json5  scout.json5
game/mods/core/devices/: player_inputs.json5
game/mods/core/unit_variables/: cells_count.json5
game/mods/mod/settings/: render_settings.json
game/mods/mod/spaceships/: scout.json5
game/src/: combat.rs  ecs_tools.rs  loading.rs  main.rs  mods.rs  state.rs
game/src/combat/: controller.rs  device.rs  signals.rs  spawning.rs
game/src/combat/controller/: behavior.rs  inputs.rs  tank_controller.rs
game/src/combat/controller/behavior/: player_behavior.rs
game/src/combat/device/: tank_controller.rs
game/src/combat/signals/: inputs.rs
game/src/loading/: json5_asset_plugin.rs
mod_asset_source/: Cargo.toml
mod_asset_source/src/: lib.rs  read_dir.rs  read_file.rs
mod_loading/: Cargo.toml
mod_loading/src/: json5_asset_plugin.rs  lib.rs  loading.rs  mods.rs
model/: Cargo.toml
model/src/: controllers.rs  formula.rs  lib.rs  registries.rs  spaceship.rs  sprite.rs  types.rs  unit_definition.rs
model/src/device/: tank_controller.rs
model/src/formula/: formula_context.rs
model/src/registries/: device.rs  spaceship.rs  unit_definition.rs  variable.rs
model/src/registries/device/: player_inputs.rs  tank_controller.rs
model/src/settings/: game_settings.rs
model/src/types/: formula.rs  signal.rs  sprite.rs
model/src/types/formula/: formula_context.rs
registry/: Cargo.toml
registry/src/: lib.rs  path.rs  registry.rs  traverse.rs
registry/src/registry/: entry.rs  id.rs  reflect_registry.rs  shaped_map.rs  singleton.rs
registry/src/registry/id/: lexing.rs
utils/: Cargo.toml
utils/src/: cmp.rs  decay.rs  lib.rs  map.rs  range.rs  rect.rs  rootcause_ext.rs  serde_with.rs  small_index.rs  stepper.rs  tracing.rs
