[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
common_model = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
bevy_reflect = { workspace = true, features = ["reflect_documentation"] }
registry = { workspace = true }
bevy_asset = { workspace = true, default-features = false }
bevy_image = { workspace = true, default-features = false }
exmex = { workspace = true }
rootcause = { workspace = true }
utils = { workspace = true }

[lints]
workspace = true
